added json files, edited css

--- a/html/product-details.html
+++ b/html/product-details.html
@@ -156,7 +156,7 @@
                             <img src="../images/icons/review-profile-icon.png" alt="seller profile icon">
                             <div class="seller-information">
                                 <p id="sellerUsername">@Username</p>
-                                <p>Joined <span id="sellerJoined">N/A</span></p>
+                                <p class="seller-joined">Joined <span id="sellerJoined">N/A</span></p>
                             </div>
                         </div>
                         <button id="contactSeller">Chat</button>
@@ -170,27 +170,27 @@
                     <h3>Details</h3>
                     <div class="details-grid">
                         <div class="details">
-                            <h4><strong>Category</strong></h4>
+                            <h4>Category</h4>
                             <p><span id="productCategory">N/A</span></p>
                         </div>
                         <div class="details">
-                            <h4><strong>Condition</strong></h4>
+                            <h4>Condition</h4>
                             <p><span id="productCondition">N/A</span></p>
                         </div>
                         <div class="details">
-                            <h4><strong>Listed</strong></h4>
+                            <h4>Listed</h4>
                             <p><span id="productListed">N/A</span></p>
                         </div>
                         <div class="details">
-                            <h4><strong>Dimensions</strong></h4>
+                            <h4>Dimensions</h4>
                             <p><span id="productDimensions">N/A</span></p>
                         </div>
                         <div class="details">
-                            <h4><strong>Colour</strong></h4>
+                            <h4>Colour</h4>
                             <p><span id="productColour">N/A</span></p>
                         </div>
                         <div class="details">
-                            <h4><strong>Material</strong></h4>
+                            <h4>Material</h4>
                             <p><span id="productMaterial">N/A</span></p>
                         </div>
                     </div>
@@ -219,7 +219,10 @@
         </section>
         <!--similar listings section-->
         <section class="similar-listings">
-            
+            <h2>SIMILAR LISTINGS</h2>
+            <div class="listings-container" id="similarListings">
+                <!--products will be inserted here dynamically-->
+            </div>
         </section>
         <!--footer section-->
         <footer class="footer">
