--- a/html/listing.html
+++ b/html/listing.html
@@ -138,71 +138,91 @@
     </header>
     <!-- main content -->
     <main class="main-content">
-        <h1>MAKE A LISTING</h1>
-    <!--progress bar section-->
-    <div class="progress-bar">
-        <div class="step active">Upload images</div>
-        <div class="step">Choose category</div>
-        <div class="step">Select condition</div>
-        <div class="step">Item Details</div>
-        <div class="step">Set price</div>
-    </div>
-    <!--listing form section-->
-    <form id="listingForm">
-        <!--1. Upload Images-->
-        <div class="section">
-            <h2>1. Upload images</h2>
-            <input type="file" id="imageUpload" multiple accept="image/*">
-            <div id="imagePreview"></div>
-        </div>
-
-        <!-- 2.Choose Category-->
-        <div class="section">
-            <h2>2. Choose category</h2>
-            <select id="category">
-                <option value="">Select a category</option>
-                <option value="Sofas">Sofas</option>
-                <option value="Tables">Tables</option>
-                <option value="Chairs">Chairs</option>
-            </select>
-        </div>
-
-        <!--3. Select Condition-->
-        <div class="section">
-            <h2>3. Select Condition</h2>
-            <div id="conditionOptions">
-                <button type="button" class="condition-btn" data-value="Brand new">Brand new</button>
-                <button type="button" class="condition-btn" data-value="Like new">Like new</button>
-                <button type="button" class="condition-btn" data-value="Lightly used">Lightly used</button>
-                <button type="button" class="condition-btn" data-value="Well used">Well used</button>
-                <button type="button" class="condition-btn" data-value="Heavily used">Heavily used</button>
+        <!--listing section-->
+        <section class="listing">
+            <h1>MAKE A LISTING</h1>
+            <!--progress bar section-->
+            <div class="progress-bar">
+                <div class="step active">Upload images</div>
+                <div class="step">Choose category</div>
+                <div class="step">Select condition</div>
+                <div class="step">Item Details</div>
+                <div class="step">Set price</div>
             </div>
-            <input type="hidden" id="condition">
-        </div>
-
-        <!--4. Item Details-->
-        <div class="section">
-            <h2>4. Item details</h2>
-            <label>Dimensions (in inches)</label>
-            <input type="number" id="height" placeholder="Height">
-            <input type="number" id="width" placeholder="Width">
-            <input type="number" id="depth" placeholder="Depth">
-            <input type="text" id="colour" placeholder="Colour">
-            <input type="text" id="material" placeholder="Material">
-            <textarea id="description" placeholder="Description"></textarea>
-        </div>
-
-        <!--5. Set Price-->
-        <div class="section">
-            <h2>5. Set price</h2>
-            <select id="currency">
-                <option value="SGD">SGD</option>
-                <option value="USD">USD</option>
-            </select>
-            <input type="number" id="price" placeholder="Price">
-        </div>
-        <button type="submit" id="listItemBtn">LIST ITEM</button>
-    </form>
+            <!--listing form section-->
+            <form class="listing-form" id="listingForm">
+                <div class="listing-left">
+                    <!--1. Upload Images-->
+                    <div class="section">
+                        <h2>1. Upload images</h2>
+                        <div class="upload-images">
+                            <div class="upload-icon">
+                                <img src="../images/icons/upload-icon.png" alt="upload icon">
+                            </div>
+                            <label for="imageUpload">Upload images</label>
+                            <input type="file" id="imageUpload" multiple accept="image/*">
+                            <div id="imagePreview">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="listing-right">
+                    <!-- 2.Choose Category-->
+                    <div class="section">
+                        <h2>2. Choose category</h2>
+                        <select id="category">
+                            <option value="">Select a category</option>
+                            <option value="Sofas">Sofas</option>
+                            <option value="Tables">Tables</option>
+                            <option value="Chairs">Chairs</option>
+                            <option value="Beds">Beds</option>
+                            <option value="Decors">Decors</option>
+                        </select>
+                    </div>
+                    <!--3. Select Condition-->
+                    <div class="section">
+                        <h2>3. Select Condition</h2>
+                        <select id="conditionOptions">
+                            <option value ="">Select a condition</option>
+                            <option value ="Brand new">Brand new</option>
+                            <option value="Like new">Like new</option>
+                            <option value="Lightly used">Lightly used</option>
+                            <option value="Well used">Well used</option>
+                            <option value="Heavily used">Heavily used</option>
+                        </select>
+                    </div>
+                    <!--4. Item Details-->
+                    <div class="section">
+                        <h2>4. Item details</h2>
+                        <label>Title</label>
+                        <input type="text" id="title" placeholder="Title">
+                        <label>Dimensions (in inches)</label>
+                        <div class="dimensions-input">
+                            <input type="number" id="height" placeholder="Height"> x 
+                            <input type="number" id="width" placeholder="Width"> x 
+                            <input type="number" id="depth" placeholder="Depth">
+                        </div>
+                        <label>Colour</label>
+                        <input type="text" id="colour" placeholder="Colour">
+                        <label>Material</label>
+                        <input type="text" id="material" placeholder="Material">
+                        <label>Description</label>
+                        <textarea id="description" placeholder="Description"></textarea>
+                    </div>
+                    <!--5. Set Price-->
+                    <div class="section">
+                        <h2>5. Set price</h2>
+                        <label>Price</label>
+                        <select id="currency">
+                            <option value="SGD">SGD</option>
+                            <option value="USD">USD</option>
+                        </select>
+                        <input type="number" id="price" placeholder="Price">
+                    </div>
+                    <button type="submit" id="listItemBtn">LIST ITEM</button>
+                </form>
+            </div>
+        </section>
         <!--footer section-->
         <footer class="footer">
             <!--footer left section-->
