fixed merge conflicts

--- a/html/product-details.html
+++ b/html/product-details.html
@@ -410,6 +410,6 @@
     <script src="../js/registration.js"></script>
     <script src="../js/product-details.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/cart-manager.js"></script>
+    <!--<script src="../js/cart-manager.js"></script>-->
 </body>
 </html>
