changed localstorage to sessionstorage and fixed review display issue

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!--collapsible menu-->
             <div class="nav-categories">
                 <ul class="nav-links">
-                    <li><a href="#" class="link">All</a></li>
+                    <li><a href="html/products.html" class="link">All</a></li>
                     <li class="dropdown">
                         <a href="#" class="link">Sofas
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
